# avatar-jojo

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
avatar/: __init__.py  config.py
avatar/agent/: __main__.py  worker.py
avatar/api/: main.py  routes.py  schemas.py  security.py  tokens.py
avatar/mone/: __init__.py  config.py  kernel.py
tests/: conftest.py  test_config.py  test_gateway_hmac.py  test_health.py  test_mone_kernel.py  test_sessions.py  test_tokens.py
